--- a/package.json
+++ b/package.json
@@ -1,15 +1,18 @@
 {
-  "name": "jest",
+  "name": "_jest_jest",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com-yungukbae:yungukbae/jest_jest.git"
   },
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "devDependencies": {
+    "jest": "^29.3.1"
+  }
 }
